terraform/helm/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: cinema-app
  name: cinema-app
spec:
  replicas: 3
  selector:
    matchLabels:
      run: cinema-app
  template:
    metadata:
      labels:
        run: cinema-app
    spec:
      containers:
        - image: monikak00/mycinemaapp:1.0.0
          name: hostname
          ports:
            - containerPort: 8080
              protocol: TCP
