terraform/helm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinema-app-backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    run: cinema-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
